# game-of-life-yew

./: .environment  .environment.prod  .gitmodules  .travis.yml  0.todomvc.js  1.cellulelife.js  1.todomvc.js  Cargo.toml  README.md  _variables.scss  bootstrap.js  cellulelife.js  cellulelife.wasm  index.html  package-lock.json  package.json  style.scss  todomvc.js  todomvc.wasm  webpack.config.js
.github/workflows/: deploy.yml  rust.yml
components/: _new-score-modal.scss
netlify/: index.html  todomvc.js
src/: app.rs  lib.rs
src/app/components/: fps.rs  grid.rs  header.rs  mod.rs
src/app/core/: game.rs  mod.rs  seeds.rs
src/utils/: colors.rs
static/: _variables.scss  index.html  style.scss
static/components/: _new-score-modal.scss
